Fixing dropdown menu overflow

--- a/static/style.css
+++ b/static/style.css
@@ -145,7 +145,7 @@ body.no-padding {
 }
 
 body.active-body {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 div.page {
